--- a/data/data/preferences.ui
+++ b/data/data/preferences.ui
@@ -854,6 +854,7 @@ When not enabled it will select the last known active window of the running appl
                         <child>
                           <object class="GtkLabel" id="plugin-description">
                             <property name="can_focus">False</property>
+                            <property name="vexpand">True</property>
                             <property name="wrap">True</property>
                             <property name="xalign">0</property>
                             <property name="yalign">0</property>
@@ -861,6 +862,20 @@ When not enabled it will select the last known active window of the running appl
                           <packing>
                             <property name="left_attach">1</property>
                             <property name="top_attach">4</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkButton" id="plugin-configure-button">
+                            <property name="label">gtk-preferences</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">True</property>
+                            <property name="receives_default">True</property>
+                            <property name="use_stock">True</property>
+                          </object>
+                          <packing>
+                            <property name="left_attach">0</property>
+                            <property name="top_attach">5</property>
+                            <property name="width">2</property>
                           </packing>
                         </child>
                       </object>
