--- a/data/data/preferences.ui
+++ b/data/data/preferences.ui
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 -->
+<!-- Generated with glade 3.20.0 -->
 <interface domain="xfdashboard">
   <requires lib="gtk+" version="3.2"/>
   <object class="GtkAdjustment" id="delay-search-timeout-adjustment">
@@ -381,6 +381,22 @@ The duration is calculated by the length of the text to show in notification. Th
                   </packing>
                 </child>
                 <child>
+                  <object class="GtkCheckButton" id="allow-subwindows">
+                    <property name="label" translatable="yes">Show child windows in main windows</property>
+                    <property name="visible">True</property>
+                    <property name="can_focus">True</property>
+                    <property name="receives_default">False</property>
+                    <property name="tooltip_markup" translatable="yes">When enabled all live window previews will also show their child windows. Disabling this option will increase performance on slower machines.</property>
+                    <property name="xalign">0</property>
+                    <property name="draw_indicator">True</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">6</property>
+                  </packing>
+                </child>
+                <child>
                   <object class="GtkCheckButton" id="always-launch-new-instance">
                     <property name="label" translatable="yes">Always start a new instance for application</property>
                     <property name="visible">True</property>
@@ -395,7 +411,7 @@ When not enabled it will select the last known active window of the running appl
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">6</property>
+                    <property name="position">7</property>
                   </packing>
                 </child>
                 <child>
@@ -410,7 +426,7 @@ When not enabled it will select the last known active window of the running appl
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">7</property>
+                    <property name="position">8</property>
                   </packing>
                 </child>
                 <child>
@@ -426,7 +442,7 @@ When not enabled it will select the last known active window of the running appl
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">8</property>
+                    <property name="position">9</property>
                   </packing>
                 </child>
                 <child>
@@ -441,7 +457,7 @@ When not enabled it will select the last known active window of the running appl
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">9</property>
+                    <property name="position">10</property>
                   </packing>
                 </child>
                 <child>
@@ -458,7 +474,7 @@ When not enabled it will select the last known active window of the running appl
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">10</property>
+                    <property name="position">11</property>
                   </packing>
                 </child>
                 <child>
@@ -473,7 +489,7 @@ When not enabled it will select the last known active window of the running appl
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">11</property>
+                    <property name="position">12</property>
                   </packing>
                 </child>
                 <child>
@@ -510,7 +526,7 @@ When not enabled it will select the last known active window of the running appl
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">True</property>
-                    <property name="position">12</property>
+                    <property name="position">13</property>
                   </packing>
                 </child>
               </object>
